ingress-nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ClusterIP
  selector:
    app: test-deployment
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
